// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test svg-editor should render correctly in mac 1`] = `
<div>
  <div>
    <div
      class="mac"
      id="svg_editor"
    >
      <div>
        <div
          class="rulers mac"
          id="rulers"
        >
          <div
            class="corner"
          />
          <div
            class="x"
            id="ruler_x"
          >
            <div>
              <canvas
                height="15"
              />
            </div>
          </div>
          <div
            class="y"
            id="ruler_y"
          >
            <div>
              <canvas
                width="15"
              />
            </div>
          </div>
          <div
            class="unit"
          >
            inch
          </div>
        </div>
        <div>
          This is dummy Workarea
        </div>
        <div
          id="main_button"
        >
          <div
            class="tool_button"
            id="main_icon"
            title="Main Menu"
          >
            <div
              id="main_menu"
            >
              <ul>
                <li
                  id="tool_open"
                  style="display: none;"
                >
                  <div
                    id="fileinputs"
                  >
                    <div />
                  </div>
                  Open SVG
                </li>
                <li
                  id="tool_import"
                  style="display: none;"
                >
                  <div
                    id="fileinputs_import"
                  >
                    <div />
                  </div>
                  Import Image
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="tools_panel"
          id="tools_top"
        >
          <div
            id="editor_panel"
          >
            <div
              class="push_button"
              id="tool_source"
              title="Edit Source [U]"
            />
          </div>
          <div
            id="text_panel"
          >
            <input
              id="text"
              size="35"
              type="text"
            />
          </div>
        </div>
        <div
          id="cur_context_panel"
        />
        <div
          class="tools_panel"
          id="tools_left"
        >
          <div
            class="tool_button"
            id="tool_select"
            title="Select Tool"
          />
          <div
            class="tool_button"
            id="tool_fhpath"
            title="Pencil Tool"
          />
          <div
            class="tool_button"
            id="tool_line"
            title="Line Tool"
          />
          <div
            class="tool_button"
            id="tool_path"
            title="Path Tool"
          />
          <div
            class="tool_button"
            id="tool_text"
            title="Text Tool"
          />
          <div
            class="tool_button"
            id="tool_image"
            title="Image Tool"
          />
          <div
            style="display: none;"
          >
            <div
              id="tool_rect"
              title="Rectangle"
            />
            <div
              id="tool_square"
              title="Square"
            />
            <div
              id="tool_fhrect"
              title="Free-Hand Rectangle"
            />
            <div
              id="tool_ellipse"
              title="Ellipse"
            />
            <div
              id="tool_path"
              title="Path"
            />
            <div
              id="tool_polygon"
              title="Polygon"
            />
            <div
              id="tool_grid"
              title="Grid Array"
            />
            <div
              id="tool_circle"
              title="Circle"
            />
            <div
              id="tool_fhellipse"
              title="Free-Hand Ellipse"
            />
          </div>
          <div
            class="tool_button"
            id="tool_path"
            title="Path Tool"
          />
          <div
            class="tool_button"
            id="tool_text"
            title="Text Tool"
          />
          <div
            class="tool_button"
            id="tool_image"
            title="Image Tool"
          />
          <div
            class="tool_button"
            id="tool_zoom"
            title="Zoom Tool [Ctrl+Up/Down]"
          />
          <div
            style="display: none;"
          >
            <div
              id="tool_rect"
              title="Rectangle"
            />
            <div
              id="tool_square"
              title="Square"
            />
            <div
              id="tool_fhrect"
              title="Free-Hand Rectangle"
            />
            <div
              id="tool_ellipse"
              title="Ellipse"
            />
            <div
              id="tool_path"
              title="Path"
            />
            <div
              id="tool_polygon"
              title="Polygon"
            />
            <div
              id="tool_grid"
              title="Grid Array"
            />
            <div
              id="tool_circle"
              title="Circle"
            />
            <div
              id="tool_fhellipse"
              title="Free-Hand Ellipse"
            />
          </div>
        </div>
        <div
          class="tools_panel"
          id="tools_bottom"
        >
          <div
            id="tools_bottom_2"
          >
            <div
              id="color_tools"
            >
              <div
                class="color_tool"
                id="tool_fill"
              >
                <label
                  class="icon_label"
                  for="fill_color"
                  title="Change fill color"
                />
                <div
                  class="color_block"
                >
                  <div
                    id="fill_bg"
                  />
                  <div
                    class="color_block"
                    id="fill_color"
                  />
                </div>
              </div>
            </div>
            <div
              class="color_tool"
              id="tool_stroke"
            >
              <label
                class="icon_label"
                title="Change stroke color"
              />
              <div
                class="color_block"
              >
                <div
                  id="stroke_bg"
                />
                <div
                  class="color_block"
                  id="stroke_color"
                  title="Change stroke color"
                />
              </div>
              <label
                class="stroke_label"
              >
                <input
                  data-attr="Stroke Width"
                  id="stroke_width"
                  size="2"
                  title="Change stroke width by 1, shift-click to change by 0.1"
                  type="text"
                  value="5"
                />
              </label>
              <div
                id="toggle_stroke_tools"
                title="Show/hide more stroke tools"
              />
              <label
                class="stroke_tool"
              >
                <select
                  id="stroke_style"
                  title="Change stroke dash style"
                >
                  <option
                    selected=""
                    value="none"
                  >
                    —
                  </option>
                  <option
                    value="2,2"
                  >
                    ...
                  </option>
                  <option
                    value="5,5"
                  >
                    - -
                  </option>
                  <option
                    value="5,2,2,2"
                  >
                    - .
                  </option>
                  <option
                    value="5,2,2,2,2,2"
                  >
                    - ..
                  </option>
                </select>
              </label>
              <div
                class="stroke_tool dropdown"
                id="stroke_linejoin"
              >
                <div
                  id="cur_linejoin"
                  title="Linejoin: Miter"
                />
                <button
                  type="button"
                />
              </div>
              <div
                class="stroke_tool dropdown"
                id="stroke_linecap"
              >
                <div
                  id="cur_linecap"
                  title="Linecap: Butt"
                />
                <button
                  type="button"
                />
              </div>
            </div>
            <div
              class="color_tool"
              id="tool_opacity"
              title="Change selected item opacity"
            >
              <label>
                <span
                  class="icon_label"
                  id="group_opacityLabel"
                />
                <input
                  id="group_opacity"
                  size="3"
                  type="text"
                  value="100"
                />
              </label>
              <div
                class="dropdown"
                id="opacity_dropdown"
              >
                <button
                  type="button"
                />
                <ul>
                  <li>
                    0%
                  </li>
                  <li>
                    25%
                  </li>
                  <li>
                    50%
                  </li>
                  <li>
                    75%
                  </li>
                  <li>
                    100%
                  </li>
                  <li
                    class="special"
                  >
                    <div
                      id="opac_slider"
                    />
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          class="dropdown"
          id="option_lists"
        >
          <ul
            id="linejoin_opts"
          >
            <li
              class="tool_button current"
              id="linejoin_miter"
              title="Linejoin: Miter"
            />
            <li
              class="tool_button"
              id="linejoin_round"
              title="Linejoin: Round"
            />
            <li
              class="tool_button"
              id="linejoin_bevel"
              title="Linejoin: Bevel"
            />
          </ul>
          <ul
            id="linecap_opts"
          >
            <li
              class="tool_button current"
              id="linecap_butt"
              title="Linecap: Butt"
            />
            <li
              class="tool_button"
              id="linecap_square"
              title="Linecap: Square"
            />
            <li
              class="tool_button"
              id="linecap_round"
              title="Linecap: Round"
            />
          </ul>
        </div>
        <div
          id="color_picker"
        />
      </div>
    </div>
    <div
      id="svg_source_editor"
    >
      <div
        class="overlay"
      />
      <div
        id="svg_source_container"
      >
        <div
          class="toolbar_button"
          id="tool_source_back"
        >
          <button
            id="tool_source_save"
            type="button"
          >
            Apply Changes
          </button>
          <button
            id="tool_source_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          id="save_output_btns"
        >
          <p
            id="copy_save_note"
          >
            Copy the contents of this box into a text editor, then save the file with a .svg extension.
          </p>
          <button
            id="copy_save_done"
            type="button"
          >
            Done
          </button>
        </div>
        <form>
          <textarea
            id="svg_source_textarea"
            spellcheck="false"
          />
        </form>
      </div>
    </div>
    <div
      id="svg_docprops"
    >
      <div
        class="overlay"
      />
      <div
        id="svg_docprops_container"
      >
        <div
          class="toolbar_button"
          id="tool_docprops_back"
        >
          <button
            id="tool_docprops_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_docprops_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset
          id="svg_docprops_docprops"
        >
          <legend
            id="svginfo_image_props"
          >
            Image Properties
          </legend>
          <label>
            <span
              id="svginfo_title"
            >
              Title:
            </span>
            <input
              id="canvas_title"
              type="text"
            />
          </label>
          <fieldset
            id="change_resolution"
          >
            <legend
              id="svginfo_dim"
            >
              Canvas Dimensions
            </legend>
            <label>
              <span
                id="svginfo_width"
              >
                width:
              </span>
               
              <input
                id="canvas_width"
                size="6"
                type="text"
              />
            </label>
            <label>
              <span
                id="svginfo_height"
              >
                height:
              </span>
               
              <input
                id="canvas_height"
                size="6"
                type="text"
              />
            </label>
            <label>
              <select
                id="resolution"
              >
                <option
                  id="selectedPredefined"
                  selected=""
                  value="predefined"
                >
                  Select predefined:
                </option>
                <option>
                  640x480
                </option>
                <option>
                  800x600
                </option>
                <option>
                  1024x768
                </option>
                <option>
                  1280x960
                </option>
                <option>
                  1600x1200
                </option>
                <option
                  id="fitToContent"
                  value="content"
                >
                  Fit to Content
                </option>
              </select>
            </label>
          </fieldset>
          <fieldset
            id="image_save_opts"
          >
            <legend
              id="includedImages"
            >
              Included Images
            </legend>
            <label>
              <input
                checked=""
                name="image_opt"
                type="radio"
                value="embed"
              />
               
              <span
                id="image_opt_embed"
              >
                Embed data (local files)
              </span>
               
            </label>
            <label>
              <input
                name="image_opt"
                type="radio"
                value="ref"
              />
               
              <span
                id="image_opt_ref"
              >
                Use file reference
              </span>
               
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="svg_prefs"
    >
      <div
        class="overlay"
      />
      <div
        id="svg_prefs_container"
      >
        <div
          class="toolbar_button"
          id="tool_prefs_back"
        >
          <button
            id="tool_prefs_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_prefs_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset>
          <legend
            id="svginfo_editor_prefs"
          >
            Editor Preferences
          </legend>
          <label>
            <span
              id="svginfo_icons"
            >
              Icon size:
            </span>
            <select
              id="iconsize"
            >
              <option
                id="icon_small"
                value="s"
              >
                Small
              </option>
              <option
                id="icon_medium"
                selected=""
                value="m"
              >
                Medium
              </option>
              <option
                id="icon_large"
                value="l"
              >
                Large
              </option>
              <option
                id="icon_xlarge"
                value="xl"
              >
                Extra Large
              </option>
            </select>
          </label>
          <fieldset
            id="change_background"
          >
            <legend
              id="svginfo_change_background"
            >
              Editor Background
            </legend>
            <div
              id="bg_blocks"
            />
            <label>
              <span
                id="svginfo_bg_url"
              >
                URL:
              </span>
               
              <input
                id="canvas_bg_url"
                type="text"
              />
            </label>
            <p
              id="svginfo_bg_note"
            >
              Note: Background will not be saved with image.
            </p>
          </fieldset>
          <fieldset
            id="change_grid"
          >
            <legend
              id="svginfo_grid_settings"
            >
              Grid
            </legend>
            <label>
              <span
                id="svginfo_snap_onoff"
              >
                Snapping on/off
              </span>
              <input
                id="grid_snapping_on"
                type="checkbox"
                value="snapping_on"
              />
            </label>
            <label>
              <span
                id="svginfo_snap_step"
              >
                Snapping Step-Size:
              </span>
               
              <input
                id="grid_snapping_step"
                size="3"
                type="text"
                value="10"
              />
            </label>
            <label>
              <span
                id="svginfo_grid_color"
              >
                Grid color:
              </span>
               
              <input
                id="grid_color"
                size="3"
                type="text"
                value="#000"
              />
            </label>
          </fieldset>
          <fieldset
            id="units_rulers"
          >
            <legend
              id="svginfo_units_rulers"
            >
              Units & Rulers
            </legend>
            <label>
              <span
                id="svginfo_rulers_onoff"
              >
                Show rulers
              </span>
              <input
                checked=""
                id="show_rulers"
                type="checkbox"
                value="show_rulers"
              />
            </label>
            <label>
              <span
                id="svginfo_unit"
              >
                Base Unit:
              </span>
              <select
                id="base_unit"
              >
                <option
                  value="px"
                >
                  Pixels
                </option>
                <option
                  value="cm"
                >
                  Centimeters
                </option>
                <option
                  value="mm"
                >
                  Millimeters
                </option>
                <option
                  value="in"
                >
                  Inches
                </option>
                <option
                  value="pt"
                >
                  Points
                </option>
                <option
                  value="pc"
                >
                  Picas
                </option>
                <option
                  value="em"
                >
                  Ems
                </option>
                <option
                  value="ex"
                >
                  Exs
                </option>
              </select>
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="dialog_box"
    >
      <div
        class="overlay"
      />
      <div
        id="dialog_container"
      >
        <div
          id="dialog_content"
        />
        <div
          id="dialog_buttons"
        />
      </div>
    </div>
  </div>
  <div>
    MockZoomBlock
  </div>
</div>
`;

exports[`test svg-editor should render correctly in win 1`] = `
<div>
  <div>
    <div
      class=""
      id="svg_editor"
    >
      <div>
        <div
          class="rulers"
          id="rulers"
        >
          <div
            class="corner"
          />
          <div
            class="x"
            id="ruler_x"
          >
            <div>
              <canvas
                height="15"
              />
            </div>
          </div>
          <div
            class="y"
            id="ruler_y"
          >
            <div>
              <canvas
                width="15"
              />
            </div>
          </div>
          <div
            class="unit"
          >
            mm
          </div>
        </div>
        <div>
          This is dummy Workarea
        </div>
        <div
          id="main_button"
        >
          <div
            class="tool_button"
            id="main_icon"
            title="Main Menu"
          >
            <div
              id="main_menu"
            >
              <ul>
                <li
                  id="tool_open"
                  style="display: none;"
                >
                  <div
                    id="fileinputs"
                  >
                    <div />
                  </div>
                  Open SVG
                </li>
                <li
                  id="tool_import"
                  style="display: none;"
                >
                  <div
                    id="fileinputs_import"
                  >
                    <div />
                  </div>
                  Import Image
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="tools_panel"
          id="tools_top"
        >
          <div
            id="editor_panel"
          >
            <div
              class="push_button"
              id="tool_source"
              title="Edit Source [U]"
            />
          </div>
          <div
            id="text_panel"
          >
            <input
              id="text"
              size="35"
              type="text"
            />
          </div>
        </div>
        <div
          id="cur_context_panel"
        />
        <div
          class="tools_panel"
          id="tools_left"
        >
          <div
            class="tool_button"
            id="tool_select"
            title="Select Tool"
          />
          <div
            class="tool_button"
            id="tool_fhpath"
            title="Pencil Tool"
          />
          <div
            class="tool_button"
            id="tool_line"
            title="Line Tool"
          />
          <div
            class="tool_button"
            id="tool_path"
            title="Path Tool"
          />
          <div
            class="tool_button"
            id="tool_text"
            title="Text Tool"
          />
          <div
            class="tool_button"
            id="tool_image"
            title="Image Tool"
          />
          <div
            style="display: none;"
          >
            <div
              id="tool_rect"
              title="Rectangle"
            />
            <div
              id="tool_square"
              title="Square"
            />
            <div
              id="tool_fhrect"
              title="Free-Hand Rectangle"
            />
            <div
              id="tool_ellipse"
              title="Ellipse"
            />
            <div
              id="tool_path"
              title="Path"
            />
            <div
              id="tool_polygon"
              title="Polygon"
            />
            <div
              id="tool_grid"
              title="Grid Array"
            />
            <div
              id="tool_circle"
              title="Circle"
            />
            <div
              id="tool_fhellipse"
              title="Free-Hand Ellipse"
            />
          </div>
          <div
            class="tool_button"
            id="tool_path"
            title="Path Tool"
          />
          <div
            class="tool_button"
            id="tool_text"
            title="Text Tool"
          />
          <div
            class="tool_button"
            id="tool_image"
            title="Image Tool"
          />
          <div
            class="tool_button"
            id="tool_zoom"
            title="Zoom Tool [Ctrl+Up/Down]"
          />
          <div
            style="display: none;"
          >
            <div
              id="tool_rect"
              title="Rectangle"
            />
            <div
              id="tool_square"
              title="Square"
            />
            <div
              id="tool_fhrect"
              title="Free-Hand Rectangle"
            />
            <div
              id="tool_ellipse"
              title="Ellipse"
            />
            <div
              id="tool_path"
              title="Path"
            />
            <div
              id="tool_polygon"
              title="Polygon"
            />
            <div
              id="tool_grid"
              title="Grid Array"
            />
            <div
              id="tool_circle"
              title="Circle"
            />
            <div
              id="tool_fhellipse"
              title="Free-Hand Ellipse"
            />
          </div>
        </div>
        <div
          class="tools_panel"
          id="tools_bottom"
        >
          <div
            id="tools_bottom_2"
          >
            <div
              id="color_tools"
            >
              <div
                class="color_tool"
                id="tool_fill"
              >
                <label
                  class="icon_label"
                  for="fill_color"
                  title="Change fill color"
                />
                <div
                  class="color_block"
                >
                  <div
                    id="fill_bg"
                  />
                  <div
                    class="color_block"
                    id="fill_color"
                  />
                </div>
              </div>
            </div>
            <div
              class="color_tool"
              id="tool_stroke"
            >
              <label
                class="icon_label"
                title="Change stroke color"
              />
              <div
                class="color_block"
              >
                <div
                  id="stroke_bg"
                />
                <div
                  class="color_block"
                  id="stroke_color"
                  title="Change stroke color"
                />
              </div>
              <label
                class="stroke_label"
              >
                <input
                  data-attr="Stroke Width"
                  id="stroke_width"
                  size="2"
                  title="Change stroke width by 1, shift-click to change by 0.1"
                  type="text"
                  value="5"
                />
              </label>
              <div
                id="toggle_stroke_tools"
                title="Show/hide more stroke tools"
              />
              <label
                class="stroke_tool"
              >
                <select
                  id="stroke_style"
                  title="Change stroke dash style"
                >
                  <option
                    selected=""
                    value="none"
                  >
                    —
                  </option>
                  <option
                    value="2,2"
                  >
                    ...
                  </option>
                  <option
                    value="5,5"
                  >
                    - -
                  </option>
                  <option
                    value="5,2,2,2"
                  >
                    - .
                  </option>
                  <option
                    value="5,2,2,2,2,2"
                  >
                    - ..
                  </option>
                </select>
              </label>
              <div
                class="stroke_tool dropdown"
                id="stroke_linejoin"
              >
                <div
                  id="cur_linejoin"
                  title="Linejoin: Miter"
                />
                <button
                  type="button"
                />
              </div>
              <div
                class="stroke_tool dropdown"
                id="stroke_linecap"
              >
                <div
                  id="cur_linecap"
                  title="Linecap: Butt"
                />
                <button
                  type="button"
                />
              </div>
            </div>
            <div
              class="color_tool"
              id="tool_opacity"
              title="Change selected item opacity"
            >
              <label>
                <span
                  class="icon_label"
                  id="group_opacityLabel"
                />
                <input
                  id="group_opacity"
                  size="3"
                  type="text"
                  value="100"
                />
              </label>
              <div
                class="dropdown"
                id="opacity_dropdown"
              >
                <button
                  type="button"
                />
                <ul>
                  <li>
                    0%
                  </li>
                  <li>
                    25%
                  </li>
                  <li>
                    50%
                  </li>
                  <li>
                    75%
                  </li>
                  <li>
                    100%
                  </li>
                  <li
                    class="special"
                  >
                    <div
                      id="opac_slider"
                    />
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          class="dropdown"
          id="option_lists"
        >
          <ul
            id="linejoin_opts"
          >
            <li
              class="tool_button current"
              id="linejoin_miter"
              title="Linejoin: Miter"
            />
            <li
              class="tool_button"
              id="linejoin_round"
              title="Linejoin: Round"
            />
            <li
              class="tool_button"
              id="linejoin_bevel"
              title="Linejoin: Bevel"
            />
          </ul>
          <ul
            id="linecap_opts"
          >
            <li
              class="tool_button current"
              id="linecap_butt"
              title="Linecap: Butt"
            />
            <li
              class="tool_button"
              id="linecap_square"
              title="Linecap: Square"
            />
            <li
              class="tool_button"
              id="linecap_round"
              title="Linecap: Round"
            />
          </ul>
        </div>
        <div
          id="color_picker"
        />
      </div>
    </div>
    <div
      id="svg_source_editor"
    >
      <div
        class="overlay"
      />
      <div
        id="svg_source_container"
      >
        <div
          class="toolbar_button"
          id="tool_source_back"
        >
          <button
            id="tool_source_save"
            type="button"
          >
            Apply Changes
          </button>
          <button
            id="tool_source_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          id="save_output_btns"
        >
          <p
            id="copy_save_note"
          >
            Copy the contents of this box into a text editor, then save the file with a .svg extension.
          </p>
          <button
            id="copy_save_done"
            type="button"
          >
            Done
          </button>
        </div>
        <form>
          <textarea
            id="svg_source_textarea"
            spellcheck="false"
          />
        </form>
      </div>
    </div>
    <div
      id="svg_docprops"
    >
      <div
        class="overlay"
      />
      <div
        id="svg_docprops_container"
      >
        <div
          class="toolbar_button"
          id="tool_docprops_back"
        >
          <button
            id="tool_docprops_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_docprops_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset
          id="svg_docprops_docprops"
        >
          <legend
            id="svginfo_image_props"
          >
            Image Properties
          </legend>
          <label>
            <span
              id="svginfo_title"
            >
              Title:
            </span>
            <input
              id="canvas_title"
              type="text"
            />
          </label>
          <fieldset
            id="change_resolution"
          >
            <legend
              id="svginfo_dim"
            >
              Canvas Dimensions
            </legend>
            <label>
              <span
                id="svginfo_width"
              >
                width:
              </span>
               
              <input
                id="canvas_width"
                size="6"
                type="text"
              />
            </label>
            <label>
              <span
                id="svginfo_height"
              >
                height:
              </span>
               
              <input
                id="canvas_height"
                size="6"
                type="text"
              />
            </label>
            <label>
              <select
                id="resolution"
              >
                <option
                  id="selectedPredefined"
                  selected=""
                  value="predefined"
                >
                  Select predefined:
                </option>
                <option>
                  640x480
                </option>
                <option>
                  800x600
                </option>
                <option>
                  1024x768
                </option>
                <option>
                  1280x960
                </option>
                <option>
                  1600x1200
                </option>
                <option
                  id="fitToContent"
                  value="content"
                >
                  Fit to Content
                </option>
              </select>
            </label>
          </fieldset>
          <fieldset
            id="image_save_opts"
          >
            <legend
              id="includedImages"
            >
              Included Images
            </legend>
            <label>
              <input
                checked=""
                name="image_opt"
                type="radio"
                value="embed"
              />
               
              <span
                id="image_opt_embed"
              >
                Embed data (local files)
              </span>
               
            </label>
            <label>
              <input
                name="image_opt"
                type="radio"
                value="ref"
              />
               
              <span
                id="image_opt_ref"
              >
                Use file reference
              </span>
               
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="svg_prefs"
    >
      <div
        class="overlay"
      />
      <div
        id="svg_prefs_container"
      >
        <div
          class="toolbar_button"
          id="tool_prefs_back"
        >
          <button
            id="tool_prefs_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_prefs_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset>
          <legend
            id="svginfo_editor_prefs"
          >
            Editor Preferences
          </legend>
          <label>
            <span
              id="svginfo_icons"
            >
              Icon size:
            </span>
            <select
              id="iconsize"
            >
              <option
                id="icon_small"
                value="s"
              >
                Small
              </option>
              <option
                id="icon_medium"
                selected=""
                value="m"
              >
                Medium
              </option>
              <option
                id="icon_large"
                value="l"
              >
                Large
              </option>
              <option
                id="icon_xlarge"
                value="xl"
              >
                Extra Large
              </option>
            </select>
          </label>
          <fieldset
            id="change_background"
          >
            <legend
              id="svginfo_change_background"
            >
              Editor Background
            </legend>
            <div
              id="bg_blocks"
            />
            <label>
              <span
                id="svginfo_bg_url"
              >
                URL:
              </span>
               
              <input
                id="canvas_bg_url"
                type="text"
              />
            </label>
            <p
              id="svginfo_bg_note"
            >
              Note: Background will not be saved with image.
            </p>
          </fieldset>
          <fieldset
            id="change_grid"
          >
            <legend
              id="svginfo_grid_settings"
            >
              Grid
            </legend>
            <label>
              <span
                id="svginfo_snap_onoff"
              >
                Snapping on/off
              </span>
              <input
                id="grid_snapping_on"
                type="checkbox"
                value="snapping_on"
              />
            </label>
            <label>
              <span
                id="svginfo_snap_step"
              >
                Snapping Step-Size:
              </span>
               
              <input
                id="grid_snapping_step"
                size="3"
                type="text"
                value="10"
              />
            </label>
            <label>
              <span
                id="svginfo_grid_color"
              >
                Grid color:
              </span>
               
              <input
                id="grid_color"
                size="3"
                type="text"
                value="#000"
              />
            </label>
          </fieldset>
          <fieldset
            id="units_rulers"
          >
            <legend
              id="svginfo_units_rulers"
            >
              Units & Rulers
            </legend>
            <label>
              <span
                id="svginfo_rulers_onoff"
              >
                Show rulers
              </span>
              <input
                checked=""
                id="show_rulers"
                type="checkbox"
                value="show_rulers"
              />
            </label>
            <label>
              <span
                id="svginfo_unit"
              >
                Base Unit:
              </span>
              <select
                id="base_unit"
              >
                <option
                  value="px"
                >
                  Pixels
                </option>
                <option
                  value="cm"
                >
                  Centimeters
                </option>
                <option
                  value="mm"
                >
                  Millimeters
                </option>
                <option
                  value="in"
                >
                  Inches
                </option>
                <option
                  value="pt"
                >
                  Points
                </option>
                <option
                  value="pc"
                >
                  Picas
                </option>
                <option
                  value="em"
                >
                  Ems
                </option>
                <option
                  value="ex"
                >
                  Exs
                </option>
              </select>
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="dialog_box"
    >
      <div
        class="overlay"
      />
      <div
        id="dialog_container"
      >
        <div
          id="dialog_content"
        />
        <div
          id="dialog_buttons"
        />
      </div>
    </div>
  </div>
  <div>
    MockZoomBlock
  </div>
</div>
`;
